# tt-boltz

./: .gitignore  NOTICE  README.md  bench_esmfold2.py  bench_ns1.py  bench_trimul_breakdown.py  bench_trimul_ttnn.py  benchmark.py  pyproject.toml  test_sdpa.py
binder/: steps.yaml
binder/config/: filtering.yaml
binder/final_ranked_designs/: all_designs_metrics.csv  final_designs_metrics_30.csv
binder/intermediate_designs/: device-0_binder.cif  device-3_binder.cif  device-3_binder.npz
demo/: README.md  app.py
demo/templates/: index.html
demo_quad/: README.md  app.py  complexes.py  pool.py  worker.py
docs/: porting-protenix-v2.md
evaluation/: high_level_modules.csv  low_level_modules.csv  triangle_attention_optimization.csv
examples/: 1024.yaml  128.yaml  1962.yaml  256.yaml  32.yaml  3233.yaml  512.yaml  64.yaml  binder.yaml  prot.fasta
mgtbind/: evaluate.py  prepare.py  sample.csv
mgtbind_inputs/: mgtbind_1000.yaml  mgtbind_1001.yaml  mgtbind_1002.yaml  mgtbind_1003.yaml  mgtbind_1004.yaml  mgtbind_1005.yaml  mgtbind_1006.yaml  mgtbind_1007.yaml  mgtbind_1008.yaml  mgtbind_1009.yaml  mgtbind_1010.yaml  mgtbind_1011.yaml  mgtbind_1012.yaml  mgtbind_1013.yaml  mgtbind_1014.yaml  mgtbind_1015.yaml  mgtbind_1016.yaml  mgtbind_1017.yaml  mgtbind_1018.yaml  mgtbind_1019.yaml  mgtbind_1020.yaml  mgtbind_1021.yaml  mgtbind_1022.yaml  mgtbind_1023.yaml  mgtbind_1024.yaml  mgtbind_1025.yaml  mgtbind_1026.yaml  mgtbind_1027.yaml  mgtbind_1028.yaml  mgtbind_1029.yaml  mgtbind_1030.yaml  mgtbind_1031.yaml  mgtbind_1032.yaml  mgtbind_1033.yaml  mgtbind_1034.yaml  mgtbind_1035.yaml  mgtbind_1036.yaml  mgtbind_1041.yaml  mgtbind_1042.yaml  mgtbind_1043.yaml  (+3564 more)
scripts/: generate_random_structure.py  integration_test.py  protenix_atomdec_parity.py  protenix_atomenc_coords_parity.py  protenix_atomtx_torch_ref.py  protenix_atomtx_ttnn_parity.py  protenix_confidence_parity.py  protenix_denoiser_parity.py  protenix_deterministic_fidelity.py  protenix_diffcond_parity.py  protenix_dit_consistent_parity.py  protenix_dit_fp32_parity.py  protenix_dit_parity.py  protenix_dit_tolerance.py  protenix_extract_atomdec_pre.py  protenix_extract_atomenc_pre.py  protenix_extract_atomfeat.py  protenix_extract_atomtx.py  protenix_extract_confidence_pre.py  protenix_extract_denoiser_pre.py  protenix_extract_diffusion_consistent.py  protenix_extract_diffusion_gold.py  protenix_extract_dit_blocks.py  protenix_extract_dit_consistent.py  protenix_extract_ife.py  protenix_extract_lig_gold.py  protenix_extract_na_gold.py  protenix_extract_traj.py  protenix_extract_trunk_gold.py  protenix_extract_trunkin.py  protenix_fold_e2e.py  protenix_ife_parity_gate.py  protenix_msa_parity.py  protenix_pairformer48_parity.py  protenix_predict.py  protenix_ref_build.py  protenix_ref_forward.py  protenix_sample_e2e.py  protenix_seqfold.py  protenix_singlecond_parity.py  (+6 more)
tests/: esmc_reference.py  esmfold2_reference.py  generate_random_protein_sweep.py  protenix_reference.py  run_tests.sh  test_boltzgen.py  test_boltzgen_regression.py  test_esmc.py  test_esmfold2.py  test_protenix.py  test_protenix_atomfeat.py  test_protenix_atomtx.py  test_protenix_confidence.py  test_protenix_data.py  test_protenix_diffusion.py  test_protenix_diffusion_cond.py  test_protenix_fold.py  test_protenix_ife.py  test_protenix_largeN.py  test_protenix_ligand.py  test_protenix_msa.py  test_protenix_na.py  test_protenix_seqfold.py  test_protenix_traj.py  test_protenix_trunk_class.py  test_protenix_trunk_msa.py  test_protenix_trunk_pairformer.py  test_protenix_trunk_template.py  test_protenix_trunkin.py  test_structure.py  test_tenstorrent.py
tt_bio/: boltz2.py  distributed.py  esmc.py  esmfold2.py  esmfold2_runtime.py  main.py  progress.py  protenix.py  protenix_data.py  protenix_weights.py  reference.py  tenstorrent.py  worker.py
tt_boltz/: _profile.py  boltz2.py  boltzgen.py  distributed.py  esmc.py  esmfold2.py  esmfold2_runtime.py  install_system_deps.py  main.py  predictor.py  progress.py  reference.py  runtime.py  tenstorrent.py  worker.py
(+370 files in other folders)
