[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "tt-boltz"
version = "0.1"
description = "Boltz-2 implementation for inference on Tenstorrent Blackhole and Wormhole"
requires-python = ">=3.10,<3.13,!=3.11.*"
dependencies = [
    "torch",
    "numpy",
    "rdkit",
    "requests",
    "pandas",
    "einops",
    "einx",
    "mashumaro",
    "modelcif",
    "click",
    "pyyaml",
    "omegaconf",  # only needed to unpickle DictConfig objects baked into upstream ckpts
    "biopython",
    "biotite",
    "scipy",
    "numba",
    "gemmi",
    "scikit-learn",
    "chembl_structure_pipeline",
    "pdbeccdutils",
    "hydride",
    "pydssp",
    "logomaker",
    "edit_distance",
    "huggingface_hub",
    "tqdm",
    "rich",
    "pytest",
    "ttnn==0.68.0",
]

[project.scripts]
tt-boltz = "tt_boltz.main:cli"

[tool.setuptools]

[tool.setuptools.packages.find]
include = ["tt_boltz*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
