[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "tt-boltz"
version = "0.1"
description = "Boltz-2 implementation for inference on Tenstorrent Blackhole and Wormhole"
requires-python = ">=3.10,<3.13,!=3.11.*"
dependencies = [
    "torch",
    "numpy",
    "rdkit",
    "requests",
    "pandas",
    "einops",
    "mashumaro",
    "modelcif",
    "click",
    "pyyaml",
    "omegaconf",  # only needed to unpickle DictConfig objects baked into upstream ckpts
    "biopython",
    "biotite",
    "matplotlib",
    "scipy",
    "numba",
    "gemmi",
    "scikit-learn",
    "chembl_structure_pipeline",
    "hydride",
    "pydssp",
    "tqdm",
    "rich",
    "pytest",
    "huggingface_hub",  # esmc.py: snapshot_download / hf_hub_download (ESMC-6B + ESMFold2 weights)
    "safetensors",      # esmc.py: safe_open for the sharded 6B checkpoint
    "ttnn==0.68.0",
]

[project.scripts]
tt-boltz = "tt_boltz.main:cli"

[tool.setuptools]

[tool.setuptools.packages.find]
include = ["tt_boltz*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
